--- a/Digits.ipynb
+++ b/Digits.ipynb
@@ -3,6 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42414861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### GOOGLE COLAB USERS ONLY; SKIP THIS IF YOU'RE NOT ON GOOGLE COLAB\n",
+    "!wget https://github.com/ursinus-cs477-f2023/Week8_DigitsSoftmax/archive/refs/heads/main.zip\n",
+    "!unzip main.zip\n",
+    "!mv Week8_DigitsSoftmax-main/Digits Digits\n",
+    "!mv Week8_DigitsSoftmax-main/DigitsTest DigitsTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9aafcc09",
    "metadata": {},
    "outputs": [],
